--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,3 +59,4 @@ add_executable(data_structure_review
 add_executable(t1 图/最短路径算法.cpp)
 add_executable(t2 图/拓扑排序.cpp 图/拓扑排序.h)
 add_executable(find 查找/查找算法.cpp)
+add_executable(hashtable 查找/哈希表.cpp)
