--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,3 +81,10 @@ add_executable(NOIP2002 算法优化/题解/NOIP2002产生数.cpp)
 add_executable(addBigNum 算法优化/高精度加法.cpp)
 add_executable(spfa 算法优化/spfa解决负环图最短路径.cpp)
 add_executable(spfaLQB 算法优化/题解/蓝桥杯spfa道路与航道.cpp)
+add_executable(AToE 算法优化/题解/模拟赛/AToE.cpp)
+add_executable(GP 算法优化/题解/模拟赛/G棋盘.cpp)
+add_executable(HP 算法优化/题解/模拟赛/H停车场.cpp)
+add_executable(ISort 算法优化/题解/模拟赛/I人字排列.cpp)
+add_executable(mutipBigNum 算法优化/题解/高精度乘法.cpp)
+add_executable(JDfs 算法优化/题解/模拟赛/J教学楼通道.cpp)
+add_executable(Knuscal 图/STL_version/克鲁斯卡尔.cpp)
